# Data-Wizards-Backend

./: README.md  datawizards-tempo-aqi.ipynb  main.py  pyproject.toml
Harmony_datasets/: nasa_harmony.py
Models/: models.py
