[project]
name = "data-wizards-backeend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "cartopy>=0.25.0",
    "earthaccess>=0.15.1",
    "fastapi>=0.118.0",
    "h5netcdf>=1.6.4",
    "harmony",
    "harmony-py>=1.3.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "python-dotenv>=0.20.0",
    "python-multipart>=0.0.20",
    "rasterio>=1.4.3",
    "shapely>=2.0.7",
    "uvicorn>=0.37.0",
    "xarray>=2025.9.1",
]
